Wed Jul 17 20:30:30 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/wrapper.c: Include <locale.h> even under --disable-nls.

Mon Jul 15 14:18:56 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Allow EOF to terminate MAN_NAME cleanly.

Thu Jul 11 20:45:36 BST 2002  Colin Watson  <cjwatson@debian.org>

	* manual/man_db.me: Version 0.7. Remove version number from \*M
	  string. Set a default page width of 78 ens for nroff output. Add
	  myself as an author.
	* manual/intro.me (man-db): Mention lexgrog.
	  (The format of manual pages): Ted and Werner now maintain groff.
	* manual/sec.me (Specifying a section): Extensions don't have to be
	  listed unless a special ordering is desired.
	* manual/files.me (Other OS's manual pages): --systems, not
	  --system.
	  (NLS manual pages): Likewise. Update Daniel Quinlan's e-mail
	  address. Correct "/usr/man/man" to "/usr/man" in example manpath
	  output.
	  (Displaying latin1 characters on a Linux virtual terminal): Set
	  sample script in a constant-width font.
	  (Local cat page directory caches): Modification times are now
	  compared for equality rather than for the cat file being more
	  recent.
	* manual/format.me (GROFF): tools/nroff-script is no longer
	  provided.
	  (Pre-format processors (pre-processors)): Mention the lexgrog scan
	  for preprocessor hints.
	* manual/db.me (Contents of an index database): Clarify where the
	  true case of a name is stored.
	  (Accessdb): accessdb is compiled by default now.
	* manual/misc.me (NLS message catalogues): Point to the Translation
	  Project.
	* manual/*.me: Minor wording improvements. Apply better *roff style
	  (newline at each sentence break).

	* man/THANKS: Update Jordi Mallach's e-mail address.

Sun Jul  7 22:19:41 BST 2002  Colin Watson  <cjwatson@debian.org>

	* tools/config.guess: Update to 2002-05-29.
	* tools/config.sub: Update to 2002-06-21.
	* tools/README: Describe config.guess and config.sub.
